Bug 797009 - Remove bad assertion in HTML parser. r=hsivonen